Word Wrap fixed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,6 +15,11 @@ body p {
 main {
     flex: 1 0 auto;
 }
+
+p {
+    word-wrap: break-word;
+}
+
 .card-content-title {
     font-weight: bold;
 }
